modified placholder in input

--- a/index.html
+++ b/index.html
@@ -507,9 +507,9 @@
     </div>
     <div class="container">
         <form action="#" method="post">
-            <input type="text" name="Name" placeholder="Full Name" required>
-            <input type="email" name="Email" placeholder="Email Address" required>
-            <input type="tel" name="Phone" placeholder="Phone Number" required>
+            <input type="text" name="Name" placeholder="Full Name" required autocomplete="on">
+            <input type="email" name="Email" placeholder="Email Address" required autocomplete="on">
+            <input type="tel" name="Phone" placeholder="Phone Number" required autocomplete="on"> 
             <select name="Department" required>
                 <option value="" disabled selected>Department</option>
                 <option value="Cardiology">Cardiology</option>
@@ -545,7 +545,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <form action="#" method="post" >
-            <input type="email" name="Email" placeholder="Enter Your Email" required>
+            <input type="email" name="Email" placeholder="Enter Your Email" required autocomplete="on">
             <button type="submit">Subscribe</button>
         </form>
     </div>
@@ -596,7 +596,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
             <form action="#">
-                <input type="email" name="Email" placeholder="Email Address" required>
+                <input type="email" name="Email" placeholder="Email Address" required autocomplete="on">
                 <button type="submit"><i class="fa-solid fa-paper-plane"></i></button>
             </form>
         </div>
